- Tweaks to dropdown spacing after rebase - Removes a CSS fix for a browser bug that’s no longer required

--- a/scss/bitstyles/objects/dropdown/_.scss
+++ b/scss/bitstyles/objects/dropdown/_.scss
@@ -6,7 +6,7 @@
   width: min-content;
   max-width: 90vw;
   max-height: $bitstyles-dropdown-max-height;
-  min-width: 9rem;
+  min-width: 10rem;
   padding: $bitstyles-dropdown-separator-spacing 0;
   overflow-x: hidden;
   overflow-y: auto;
